src/components/document/document-scroller.scss
@import "../vars";

$footer-height: 12px;

.document-thumbnail-scroller {
  background: white;
  border: solid 1.5px $classwork-purple;
  border-bottom: none;
  height: 156px;
  position: relative;
  width: 100%;

  &.large-thumbnails {
    border: solid 1.5px $classwork-purple;
    height: calc(100% - $document-scroller-header-height);

    .document-thumbnail-list {
      flex-wrap: wrap;
      height: 100%;
      justify-content: space-between;
      overflow: scroll;
      width: 100%;

      .document-thumbnail {
        aspect-ratio: 8/7;
        height: auto;
        width: 50%;
      }

      .list-item {
        height: 100%;
        width: 100%;

        .scaled-list-item-container {
          height: calc(100% - $footer-height);
          width: 100%;

          // Scaled items are rendered at a large size, then shrunk to fit the actual area, which makes them the
          // correct size and scale.
          .scaled-list-item {
            height: 200%;
            pointer-events: auto; // Enables scrolling
            transform: scale(.5);
            width: 200%;
          }
        }

        .footer {
          .info {
            width: 100%;
          }
        }
      }
    }
  }

  .document-thumbnail-list {
    align-items: center;
    display: flex;
    flex-wrap: nowrap;
    left: 0;
    margin: 0;
    overflow: hidden;
    padding: 3px;
    position: relative;
    top: 0;

    .document-thumbnail {
      height: 146px;
      padding: 10px;
      width: 116px;

      &:hover {
        background: $classwork-purple-light-8;
        border-radius: 5px;
      }

      &.selected {
        background: $classwork-purple-light-6;
        border-radius: 5px;
      }
    }

    .list-item {
      height: 126px;
      min-height: auto;
      min-width: auto;
      overflow: visible;
      padding: 0;
      width: 96px;

      .scaled-list-item-container {
        flex-shrink: 0;
        height: 74px;
        overflow: hidden;
        width: 96px;

        .scaled-list-item {
          height: 738px;
          width: 958px;
        }
      }

      .icon-holder {
        left: 2px;
        right: auto;
        top: -5px;
        width: 24px;
      }
      .icon-star {
        right: 0;
        top: 0;
      }

      .footer {
        .info {
          height: $footer-height;
          line-height: 1.2;
          margin-top: 4px;
          width: 96px;
        }
      }
    }
  }

  .scroll-arrow {
    align-items: center;
    background: white;
    border: none;
    border-radius: 50%;
    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.35);
    cursor: pointer;
    display: flex;
    left: 7px;
    justify-content: center;
    margin-top: -16px;
    position: absolute;
    height: 32px;
    top: 50%;
    width: 32px;
    z-index: 5;

    &.right {
      box-shadow: -2px -2px 4px 0 rgba(0, 0, 0, 0.35);
      left: auto;
      right: 7px;
      transform: rotate(180deg);
    }

    &:hover {
      background: $classwork-purple-light-5;
    }
    &:active {
      background: $classwork-purple-light-4;
    }

    svg {
      height: 24px;
      stroke: $classwork-purple-dark-1;
      width: 24px;
    }
  }
}

